# grand-challenge.org

./: .buildinfo  .codeclimate.yml  .coveragerc  .dockerignore  .env.dev  .env.local  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .pyup.yml  .readthedocs.yml  .travis.yml  .zenodo.json  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  Iterative_buttons_modality,_task,_region,_structure.patch  Makefile  NOTICE  Pipfile  README.md  README.rst  Vagrantfile  algorithms.html  architecture.html  azure-pipelines.yml  biome.json  components.html  cycle_docker_compose.sh  design.html  dev.env  development.html  docker-compose.common.yml  docker-compose.yml  docker-compose_dev.yml  eslint.config.mjs  (+25 more)
.github/workflows/: ci.yml  dependency-update.yml  precommit.yml  project.yml
_modules/: functools.html  index.html
_modules/simple_history/: models.html
_sources/: algorithms.rst.txt  architecture.rst.txt  development.rst.txt  index.rst.txt
app/: .coverage  .gitignore  babel.config.js  jest.config.js  jest.setup.js  manage.py  mypy.ini  package-lock.json  package.json  pytest.ini  resetmigrations.sh  setup.py  webpack-stats.json  webpack.config.js
app/admins/: emails.py  forms.py  urls.py  views.py
app/api/: serializers.py  urls.py  views.py
app/challenges/: __init__.py  apps.py  emails.py  forms.py  models.py  permissions.py  signals.py  urls.py  views.py
app/ckeditor/: tests.py  urls.py  views.py  widgets.py
app/comic/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
app/comicckeditor/: fields.py  tests.py  views.py  widgets.py
app/comicmodels/: __init__.py  admin.py  apps.py  forms.py  models.py  permissions.py  signals.py  urls.py  views.py
app/comicsite/: admin.py  api.py  models.py  tests.py  urls.py  validators.py  views.py
app/config/: __init__.py  celery.py  denylist.py  settings.py  settings_ai.py  settings_api.py  urls.py  urls_ai.py  urls_api.py  uvicorn.py  wsgi.py
app/core/: api.py  urls.py  views.py
app/dataproviders/: ProjectExcelReader.py
app/docs/: Makefile  architecture.rst  conf.py  design.rst  development.rst  index.rst  workstations.rst
app/evaluation/: __init__.py  apps.py  emails.py  exceptions.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
app/filetransfers/: api.py  models.py  urls.py  views.py
app/grandchallenge/: queryset_filter.py
app/health_imaging/: __init__.py  app.py  auth.py  lifespan.py  models.py  settings.py  views.py
app/jqfileupload/: forms.py  models.py  tasks.py  views.py
app/knox/: LICENSE  METADATA  admin.py  auth.py  crypto.py  models.py  serializers.py  settings.py  urls.py  views.py
app/old_tests/: conftest.py  settings.py  utils.py
app/pages/: forms.py  models.py  urls.py  views.py
app/panimg/: __init__.py  models.py  panimg.py  settings.py  types.py
app/participants/: __init__.py  apps.py  emails.py  models.py  signals.py  urls.py  views.py
app/profiles/: admin.py  forms.py  models.py  urls.py  views.py
app/teams/: __init__.py  apps.py  models.py  signals.py  urls.py  views.py
app/tests/: api_utils.py  conftest.py  factories.py  fixtures.py  model_helpers.py  serializer_helpers.py  settings.py  storage.py  test_dependencies.py  utils.py  viewset_helpers.py
app/uploads/: __init__.py  api.py  apps.py  emails.py  forms.py  models.py  signals.py  urls.py  views.py
django/: .gitignore  images - Shortcut.lnk  manage.py  sqlite.db
django/ComicSite/: admin.py  models.py  urls.py  views.py
django/DataProviders/: FileSystemDataProvider.py
django/Static/: readme.txt
django/account/: urls.py
django/ckeditor/: __init__.py  fields.py  tests.py  urls.py  views.py  widgets.py
django/comic/: settings.py  urls.py  wsgi.py
django/comicmodels/: admin.py  forms.py  models.py  signals.py  tests.py  views.py
django/comicsite/: admin.py  api.py  models.py  storage.py  tests.py  urls.py  views.py
django/dataproviders/: DropboxDataProvider.py  FileSystemDataProvider.py  LocalProjectDataProvider.py  ProjectDataProvider.py  ProjectExcelReader.py
django/django_dropbox/: __init__.py  settings.py  storage.py  tests.py  urls.py  views.py
django/filetransfers/: api.py  forms.py  models.py  urls.py  views.py
django/mevislab_visualisation/: views.py
django/profiles/: admin.py  forms.py  models.py  urls.py  views.py
dockerfiles/: deploy.sh
dockerfiles/db/: postgres.test.conf
dockerfiles/garage/: garage.toml  garage_setup.sh
dockerfiles/gdcm/: Dockerfile
dockerfiles/gunicorn/: Dockerfile
dockerfiles/http/: Dockerfile  dhparams.pem  nginx.conf  nginx.conf.template
dockerfiles/web/: Dockerfile  bootstrap.js  google-analytics-tracking.js.template
dockerfiles/web-base/: Dockerfile
dockerfiles/workstation/: .dockerignore  Dockerfile  save.sh
dockerfiles/workstation-proxy/: traefik.toml
docs/: Makefile  Pipfile  algorithms.rst  api.rst  architecture.rst  components.rst  conf.py  container.puml  design.rst  development.rst  evaluation.rst  getting-started.rst  index.rst  make.bat  processor.rst  reader-studies.rst  requirements.docs.txt  requirements.txt  workstations.rst
docs/api/: authentication.rst
docs/development/: local.rst  setup.rst
docs/diagrams/: component_api.puml  component_celery.puml  component_workstations.puml  container.puml  system_context.puml
docs/docs/: building.rst
docs/models/: algorithms.rst  benchmarks.rst  data.rst  index.rst
old_docs/: Makefile  conf.py  evaluation.rst  index.rst
scripts/: .gitignore  add_user_to_archives_algorithms.sh  algorithm_evaluation_fixtures.py  challenge_request_fixtures.py  codebuild_fixtures.py  component_interface_value_fixtures.py  cost_fixtures.py  create_docpages.py  create_retina_archive_structures.py  create_superuser.py  create_superuser.sh  development_fixtures.py  external_algorithm_evaluation_fixtures.py  garage.py  health_imaging_fixtures.py  minio.py  pentest_fixtures.py  workshop_fixtures.py
testing/: 60-mariadb.cnf
tests/: app_tests.sh  test_docker.py
(+4403 files in other folders)
