[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = ["config", "grandchallenge", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']

[tool.docformatter]
recursive = true
# to large just to be ignored as long lines are skipped anyway
wrap-summaries = 999
wrap-descriptions = 120
blank = true

[tool.curlylint.rules]
html_has_lang = 'en'
django_forms_rendering = true
image_alt = true
# TODO: Enable this, would otherwise be a big change
# indent = 4
meta_viewport = true
no_autofocus = true
tabindex_no_positive = true

[tool.poetry]
name = "grand-challenge.org"
version = "0.1.0"
description = "A platform for end-to-end development of machine learning solutions in biomedical imaging"
license = "Apache-2.0"
authors = ["James Meakin <code@jmsmkn.com>"]
readme = "README.md"
homepage = "https://grand-challenge.org/"
repository = "https://github.com/comic/grand-challenge.org/"
documentation = "https://comic.github.io/grand-challenge.org/"
packages = [
    { include = "grandchallenge", from = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Disallow 5.3.0 due to https://github.com/celery/kombu/issues/1744
celery = {version = "!=5.0.6,!=5.3.0", extras = ["redis", "sqs"]}
kombu = {version ="!=5.3.0"}
django = "<4.2"
django-countries = "*"
django-crispy-forms = "*"
crispy-bootstrap4 = "*"
djangorestframework = "*"
drf-spectacular = "*"
python-magic = "*"
gunicorn = "*"
uvicorn = {version = "*", extras = ["standard"]}
django-celery-email = "*"
"psycopg2" = "*"
"django-select2" = "*"
django-celery-results = "!=2.4.0"
django-summernote = "*"
bleach = {version = "*", extras = ["css"]}
jsonschema = "*"
django-autocomplete-light = "*"
django-storages = ">=1.13.1,<1.14"
boto3 = ">1.18.8"
whitenoise = "*"
brotli = "*"
djangorestframework-guardian = "*"
django-extensions = "*"
django-simple-history = "*"
sentry-sdk = "*"
django-cors-headers = "*"
django-celery-beat = "!=1.6.0"
django-guardian = "!=2.2.0"
django-markdownx = "*"
django-filter = "*"
ua-parser = "*"
djangorestframework-csv = "*"
humanize = "*"
disposable-email-domains = "*"
django-machina = "*"
django-haystack = "*"
citeproc-py = "*"
django-ipware = "*"
pyswot = "*"
django-redis = "*"
django-allauth = "*"
jinja2 = "*"
openpyxl = "*"
requests = "*"
django_rest_knox = "*"
Pillow = "*"
panimg = ">=0.12.0"
django-activity-stream = "*"
django-stdimage = "*"
django-permissions-policy = "*"
aws-xray-sdk = "*"
django-deprecate-fields = "*"
django-add-default-value = "*"
django-ses = "*"
Pygments = "*"
django-forms-dynamic = "*"
django-allauth-2fa = "*"
urllib3 = "<2"  # Pinned due to lack of support in botocore (https://github.com/boto/botocore/issues/2926)
django-compressor = "*"
django-libsass = "*"
django-csp = "*"

[tool.poetry.group.dev.dependencies]
pytest-django = "*"
pytest-cov = "*"
pytest-mock = "*"
factory-boy = "*"
django-debug-toolbar = "*"
sphinx-autobuild = "*"
sphinx = "*"
pytest-xdist = "*"
sphinx-autodoc-typehints = "*"
werkzeug = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-plantuml = "*"
pytest-randomly = "*"
sphinxcontrib-django = "*"
amass = "*"
aiohttp = "^3.8" # Fix for amass dependency
watchfiles = "*"
playwright = "*"
pytest-playwright = "*"
pytest-rerunfailures = "*"

[tool.amass]
output = "app/grandchallenge/core/static/vendored"

[tool.amass.dependencies]
htmx = { version = "==1.7.0", include = ["htmx(.min)?.js(.map)?"] }
"moment.js" = { version = "==2.24.0", include = ["moment(.min)?.js(.map)?"] }
vega = { version = "==5.20.2", include = ["vega(.min)?.js(.map)?"], maps = ["vega.min.js.map"] }
vega-lite = { version = "==5.1.0", include = ["vega-lite(.min)?.js(.map)?"] }
vega-embed = { version = "==6.17.0", include = ["vega-embed(.min)?.js(.map)?"] }
openseadragon = { version = "==2.4.1", include = ["openseadragon(.min)?.js(.map)?", "images/*"] }
jsoneditor = { version = "==9.5.2", include = ["jsoneditor(.min)?.js(.map)?", "jsoneditor(.min)?.css(.map)?", "img/*"], maps = ["jsoneditor.map"] }
"sentry-browser" = { version = "==6.19.7", include = ["bundle(.min)?.js(.map)?"], maps = ["bundle.min.js.map", "bundle.js.map"] }
"hammer.js" = { version = "==2.0.8", include = ["hammer(.min)?.js(.map)?"] }
uppy = { version = "==2.2.0", include = ["uppy(.min)?.css(.map)?", "uppy(.min)?.js(.map)?"], maps = ["packages/uppy/dist/uppy.min.js.map"] }
jscolor = { version = "==2.5.1", include = ["jscolor(.min)?.js(.map)?"] }
jquery = { version = "==3.7.0", include = ["jquery(.min)?(.js|.map)?$"] }
font-awesome = { version = "==5.15.4", include = ["css/all(.min)?.css", "webfonts/*"] }
bootstrap = { version = "==4.6.2", include = ["js/bootstrap.bundle(.min)?.js(.map)?", "css/bootstrap(.min)?.css(.map)?", "scss/*"] }
bootswatch = { version = "==5.3.0", provider = "unpkg", include = ["dist/flatly/.*.scss"] }
"@github/markdown-toolbar-element" = { version = "==1.2.0", provider = "unpkg", include = ["dist/index.umd.js$"] }
itk-vtk-viewer = { version = "==11.11.2", provider = "unpkg", include = ["dist/itkVtkViewerCDN(.min)?.js$"] }
world-atlas = { version = "==2.0.2", provider = "unpkg", include = ["countries-110m.json"] }
cornerstone-math = { version = "==0.1.6", provider = "unpkg", include = ["dist/cornerstoneMath(.min)?.js"] }
cornerstone-core = { version = "==2.2.4", provider = "unpkg", include = ["dist/cornerstone(.min)?.js"] }
itk-wasm = { version = "==1.0.0-a.10", provider = "unpkg", include = ["dist/umd/itk-wasm(.min)?.js$"] }
# Use the builder at https://datatables.net/download/
"datatables.net" = { version = "==1.11.3", provider = "unpkg", include = ["js/jquery.dataTables(.min)?.js"]}
"datatables.net-bs4" = { version = "==1.11.3", provider = "unpkg", include = ["css/dataTables.bootstrap4(.min)?.css", "js/dataTables.bootstrap4(.min)?.js"]}
"datatables.net-buttons" = { version = "==2.0.1", provider = "unpkg", include = ["js/dataTables.buttons(.min)?.js", "js/buttons.colVis(.min)?.js"]}
"datatables.net-buttons-bs4" = { version = "==2.0.1", provider = "unpkg", include = ["css/buttons.bootstrap4(.min)?.css", "js/buttons.bootstrap4(.min)?.js"]}
"datatables.net-responsive" = { version = "==2.2.9", provider = "unpkg", include = ["js/dataTables.responsive(.min)?.js"]}
"datatables.net-responsive-bs4" = { version = "==2.2.9", provider = "unpkg", include = ["css/responsive.bootstrap4(.min)?.css", "js/responsive.bootstrap4(.min)?.js"]}
